force-app/main/default/objects/Object_History__c/Object_History__c.object-meta.xml
<CustomObject>
    <description>Custom Object to track the changes of fields of objects.</description>
    <label>Object History</label>
    <nameField>
        <displayFormat>OH-{0000000000}</displayFormat>
        <label>Object History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>