force-app/main/default/objects/Object_History__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <businessOwnerGroup>Quality_Assurance</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Case object for the History record.</description>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Object Histories</relationshipLabel>
    <relationshipName>Object_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>