force-app/main/default/objects/Object_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field to store the Field Name which was updated</description>
    <label>Field</label>
    <type>TextArea</type>
</CustomField>