force-app/main/default/objects/Object_History__c/fields/Source_Object_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Record_ID__c</fullName>
    <description>Automatically populated to indicate the Source Object Record ID</description>
    <label>Source Object Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>