force-app/main/default/objects/Object_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically populated to indicate who changed a field</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Object_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>